# agent-system

./: .gitignore  AGENTS.md  PLANS.md  README.md  SESSION_RESUME.md  pyproject.toml
conf/: app.yaml  polaris.yaml  retry_policy.yaml  topics.yaml
deploy/env/: autoresearch.env.example
deploy/systemd/: autoresearch.service
docs/: architecture.md  runbook.md
docs/superpowers/plans/: 2026-04-10-phase0-phase1-implementation.md  2026-04-10-phase2-alcf-bridge-implementation.md  2026-04-15-phase3a-pbs-executor-implementation.md  2026-04-15-phase3b-remote-probe-implementation.md  2026-04-16-phase4a-incident-detection-implementation.md  2026-04-16-phase4b-claimed-state-hardening-implementation.md  2026-04-16-phase4b-safe-retry-implementation.md  2026-04-16-phase6a-daily-brief-implementation.md
docs/superpowers/specs/: 2026-04-10-auto-research-phase0-phase1-design.md  2026-04-10-phase2-alcf-bridge-design.md  2026-04-15-phase3a-pbs-executor-design.md  2026-04-15-phase3b-remote-probe-design.md  2026-04-16-phase4b-safe-retry-design.md  (+3 more)
src/autoresearch/: cli.py  db.py  decisions.py  models.py  paths.py  schemas.py  settings.py
tests/: test_bridge.py  test_cli.py  test_daily_report.py  test_db.py  test_decisions.py  test_executor.py  test_incident_classifier.py  test_incident_fetch.py  test_incident_registry.py  test_pbs_parser.py  test_probe_flow.py  test_registry.py  test_remote_bootstrap.py  test_retry_executor.py  test_retry_policy.py  test_retry_registry.py  test_run_registry.py  test_settings.py
tests/fixtures/: qstat_full.json  qstat_full.txt  qsub_success.txt
(+26 files in other folders)
