[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research"
version = "0.1.0"
description = "Lab-server control plane for auto research workflows."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "Jinja2>=3.1,<4.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
autoresearch = "autoresearch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
